fixed some issues on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -54,6 +54,16 @@ nav.sticky {
   z-index: 50;
 }
 
+/* Hide scrollbar but maintain scroll functionality */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;  /* Safari and Chrome */
+}
+
 .container-1440 {
   max-width: 1440px;
   margin-left: auto;
